2015-03-04  ------ inet-2.6 released ------

2014-11-07  ------ inet-2.5.1 released ------

2014-10-29  ------ inet-2.5.0 released ------

2014-06-12  ------ inet-2.4.0 released ------

2014-03-19  ------ inet-2.3.0 released ------

2013-12-02  Zoltan Bojthe

	fixes for C++ 11

2013-09-10  Zoltan Bojthe

	cSocketRTScheduler: bugfix for OmNET 5.0

2013-08-22  ------ inet-2.2.0 released ------

2013-07-29  Zoltan Bojthe

	MACBase and it descendants: added clearQueue() for clear outgoing queue
	at CRASH operation

2013-04-09  Andras Varga

	Introduced MACBase (INotifiable and ILifecycle), all MACs
	adapted to it

2013-03-13  Andras Varga

	cSocketRTScheduler: added support for OMNeT++ 5.x

2013-01-30  ------ inet-2.1.0 released ------

2012-08-07  ------ inet-2.0.0 released ------

2012-06-25  ------ inet-1.99.5 released ------

2012-06-15  Zoltan Bojthe

	Renamed netwIn, netwOut gates to upperLayerIn, upperLayerOut

2012-03-20  ------ inet-1.99.4 released ------

2012-02-24  ------ inet-1.99.3 released ------

2011-11-18  ------ INET-1.99.2 released ------

2011-09-16  Zoltan Bojthe

	Identical changes in ExtInterface::initialize(int stage) function
	for more readability. In old code, stage 0 was in two code blocks.

2011-09-15  Zoltan Bojthe

	Fixes for ev.disable_tracing

2011-09-14  Zoltan Bojthe

	bug #347: fix some compiler warnings.

2011-08-02  Zoltan Bojthe

	fixes for cppcheck

2011-07-18  Andras Varga

	statistics: emit pk (cPacket*) signals instead of pkBytes etc; added
	more statistics

	Utilize packetBytes() result filter in @statistic to record byte counts

2011-06-03  Andras Varga

	cosmetics: space usage made somewhat more consistent throughout the code

	Notes:
	- if you have an INET fork and want to compare the code, use the
	 "Ignore spaces" option of your visual diff tool. Most tools have
	 this option; Meld and Araxis Merge certainly do.

	- I used omnetpp/_scripts/tidymodel/spaces.pl, plus some manual tweaks
